# france-sunlight-map

./: .gitignore  1. Download RGE Alti.ipynb  2. Convert To GeoTiff.ipynb  3. VRT National.ipynb  AAOI Finder.ipynb  DEVLOG.md  README.md  README_ASC_CONVERSION.md  README_MEMORY.md  README_NEIGHBOR_PROCESSING.md  README_RGEALTI.md  README_WORKFLOW.md  REGENERATE_MAPS.md  RGE Alti.ipynb  asc_to_npy.py  build_spatial_index.py  check_html_format.py  compute.py  compute_daylight_npz.py  debug_actual_coordinates.py  download_rgealti.py  example_asc_conversion.py  extract_rgealti_from_files.py  merge_npy_files.py  process_asc_with_neighbors.py  pyproject.toml  save_asc_to_npy.py  sunlight.py  test_coordinates.py  test_image_orientation.py  test_parse_html.py  test_tile_alignment.py  test_view_coordinates.py  to_geo_tiff.py  verify_results.py  view.py
geoservices/: Geoservices.htm  extract_rgealti_links.py  link.txt  rgealti_links.txt
solartopo/: Day length, sunrise and sunset calculator.ipynb  Daylight to KML.ipynb
solartopo/data/: highest_daylenght_places.kml
