[project]
name = "sunlight-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Odyssée",email = "8287111+houseofai@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4 (==0.0.2)",
    "notebook (>=7.4.7,<8.0.0)",
    "wget (>=3.2,<4.0)",
    "py7zr (==1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
